--- a/assets/stylesheets/partials/_search.scss
+++ b/assets/stylesheets/partials/_search.scss
@@ -74,10 +74,9 @@
     transform:none;
   }
 
-
   .search-container{
     margin:20px auto;
-    width:768px;
+    width: 90%;
   }
 
   .top-visited-label{
