adjusted promotions message position (mobile)

--- a/assets/stylesheets/partials/_promotions.scss
+++ b/assets/stylesheets/partials/_promotions.scss
@@ -78,3 +78,13 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+.promotions {
+  .promotions-message{
+  position:relative;
+}  
+}
+
+}
+
