Added classes for resized text

--- a/assets/stylesheets/partials/_textResizer.scss
+++ b/assets/stylesheets/partials/_textResizer.scss
@@ -29,3 +29,14 @@
 .resizer-item-larger {
   font-size: 2.8em;
 }
+
+/*Text Resizer Classes*/
+.large-text {
+  font-size: 1.25em;
+  line-height: 27px;
+}
+
+.largest-text {
+  font-size: 1.45em;
+  line-height: 30px;
+}
