--- a/assets/stylesheets/partials/_social.scss
+++ b/assets/stylesheets/partials/_social.scss
@@ -97,3 +97,11 @@
 		}
 	}
 }
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+	.social-media-list-item {
+		margin-right: 10px;
+	}
+
+}
