Changed grid to bootstrap
any changes adjusted to work with bootstrap

--- a/assets/stylesheets/partials/_electedOfficials.scss
+++ b/assets/stylesheets/partials/_electedOfficials.scss
@@ -1,10 +1,11 @@
 .elected-officials {
+	padding: 0 0 0 10px;
+
 	img {
 		margin: 0 0 20px;
 		width: 100%;
 	}
 	border-left:3px dotted $light-gray;
-	padding:0 0 50px 25px;
 
 
 	.social-media-list {
