--- a/assets/stylesheets/partials/_news.scss
+++ b/assets/stylesheets/partials/_news.scss
@@ -70,3 +70,12 @@ information on the homepage*/
   margin:30px 0 0;
     
 }
+
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+  .news-feed {
+    padding: 0 20px 20px;  
+  }
+
+}
