--- a/assets/stylesheets/partials/_footer.scss
+++ b/assets/stylesheets/partials/_footer.scss
@@ -106,3 +106,13 @@ footer {
 .county-links-list {
 	text-align: right;
 }
+
+
+@media only screen and (max-width: 959px) {
+	.copyright {
+		margin-bottom: 10px;
+	}
+	.county-links-list {
+		text-align: left;
+	}
+}
