--- a/assets/stylesheets/partials/_social.scss
+++ b/assets/stylesheets/partials/_social.scss
@@ -98,10 +98,11 @@
 	}
 }
 
-@media only screen and (min-width: 768px) and (max-width: 959px) {
+@media only screen and (max-width: 959px) {
 
-	.social-media-list-item {
-		margin-right: 10px;
+	.social-media-list {
+		padding: 10px;
+		text-align: left;
 	}
 
 }
