--- a/assets/stylesheets/partials/_news.scss
+++ b/assets/stylesheets/partials/_news.scss
@@ -1,5 +1,5 @@
 .news-feed {
-  padding: 0 25px 0 0;
+  padding: 0 15px 0 0;
 }
 
 /*Contains the styles for Baltimore County Now*/
@@ -15,6 +15,7 @@
 }
 .feedItems{
   .item {
+    @extend .col-md-4;
     float: left;
     padding: 0 1.5em 0 0;
     width: 50%;
@@ -46,9 +47,15 @@
 }
 
 .county-photo-feed {
+  padding: 0;
+
+  .county-photo-container {
+    padding: 0 10px 0 0;
+  }
+
+
 	.county-photo-feed-item {
-		margin: 0 10px;
-    max-width: 140px;
+
     width: 100%;
 
 		&:first-child {
