Adjusted padding on smaller screens

--- a/assets/stylesheets/partials/_electedOfficials.scss
+++ b/assets/stylesheets/partials/_electedOfficials.scss
@@ -32,5 +32,13 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-	
+	.elected-officials {
+
+		.county-executive {
+			padding-left: 0;
+		}
+		.county-council {
+			padding-right: 15px;
+		}
+	}
 }
