--- a/assets/stylesheets/partials/_social.scss
+++ b/assets/stylesheets/partials/_social.scss
@@ -101,7 +101,7 @@
 		margin-right: 25px;
 	}
 	.primary-footer .social-media-list {
-		padding: 10px;
+		padding: 10px 10px 0;
 		text-align: left;
 	}
 }
