--- a/assets/stylesheets/partials/_promotions.scss
+++ b/assets/stylesheets/partials/_promotions.scss
@@ -81,15 +81,27 @@
 
 @media only screen and (max-width: 992px) {
   .slick-dots {
-    display: none !important; /*Overriding an element style attr added by slick carousel*/
+    display: none !important; /*Overriding an element style attr added by slick */
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 959px) {
+@media only screen and (max-width: 767px) {
   .promotions {
       .promotions-message{
-      position:relative;
-    }
+        background: white;
+        color: $dark-gray;
+        position:relative;
+        padding: 10px;
+  
+        h2 {
+          color: $dark-gray;
+          font-size: 1.5em;
+        }
+      }
+  }
+
+  .slick-prev, .slick-next {
+    top: 15%;
   }
 }
 
