--- a/assets/stylesheets/partials/_news.scss
+++ b/assets/stylesheets/partials/_news.scss
@@ -86,6 +86,10 @@ information on the homepage*/
 }
 
 @media only screen and (max-width: 767px) {
+  .news-feed {
+    padding: 0;
+  }
+  
   .feedItems {
     .item {
       float: none;
