--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -139,19 +139,33 @@ header {
 
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-.primary-nav{
-  width:100%;
+  .primary-nav{
+    width:100%;
+  }
+
+  .primary-nav .primary-nav-item a{
+    background: url("../../assets/img/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
+    padding: 20px 0 20px 40px;
+  }
+  .primary-nav .primary-nav-item{
+    margin: 0 0 5px;
+  }
 }
 
-.primary-nav .primary-nav-item a{
-  background: url("../../assets/img/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
-  padding: 20px 0 20px 40px;
-}
-.primary-nav .primary-nav-item{
-  margin: 0 0 5px;
-}
+@media only screen and (max-width: 767px) {
+  .primary-nav {
+    .primary-nav-item {
+      border-right: 0;
+      border-bottom: 5px solid $red;
+  
+      &:last-child {
+        border-bottom: 0;
+      }
 
-
-
-
+      a {
+        background: url("../../assets/img/little-arrow.png") no-repeat 12.5px 18px;
+        padding: 15px 0px 13px 40px;
+      }
+    }
+  }
 }
