Added Hamburger Menu

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -15,6 +15,7 @@
 @import "partials/typography";
 @import "partials/lists";
 @import "partials/header";
+@import "partials/nav";
 @import "partials/brand";
 @import "partials/promotions";
 @import "partials/search";
