Updated containers to containers to be fluid
set max width of 1200px to match psd

--- a/assets/stylesheets/partials/_grid.scss
+++ b/assets/stylesheets/partials/_grid.scss
@@ -30,8 +30,7 @@
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  max-width: 1200px;
 }
 .row {
   margin-left: -15px;
