Added hover color for text resizer

--- a/assets/stylesheets/partials/_textResizer.scss
+++ b/assets/stylesheets/partials/_textResizer.scss
@@ -18,6 +18,10 @@
   color: $light-gray;
   font-weight: bold;
   text-decoration: underline;
+
+  &:hover {
+    color: white;
+  }
 }
 .resizer-item-smaller {
   font-size: 1.6em;
