Changed search link hover color to light blue

--- a/assets/stylesheets/modules/_colors.scss
+++ b/assets/stylesheets/modules/_colors.scss
@@ -3,6 +3,7 @@ $light-gray: #dbdbdb;
 $dark-gray: #444;
 $darker-gray: #333;
 $navy: #002280;
+$light-blue:  #0033cc;
 $dark-red: #990000;
 $red:#c51110;
 $gold:#feb30c;
