--- a/assets/stylesheets/partials/_buttons.scss
+++ b/assets/stylesheets/partials/_buttons.scss
@@ -12,3 +12,19 @@ button {
 	padding: 0;
 	text-decoration: underline;
 }
+
+.link-btn {
+	background: $gold;
+	  border: 1px solid $dark-gray;
+	  padding: 10px;
+	  color: $dark-gray;
+	  text-decoration:none;
+	  font-weight:700;
+	  font-family:Arial;
+	  font-size:1.1em;
+
+	  &:hover {
+	  	background: lighten($gold, 20);
+	  	color: $dark-gray;
+	  }
+}
