Added skip nav css

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -27,5 +27,7 @@
 @import "partials/textResizer";
 @import "partials/alert";
 @import "partials/buttons";
+@import "partials/fullSite";
+@import "partials/skipNav";
 
 
