--- a/assets/stylesheets/partials/_social.scss
+++ b/assets/stylesheets/partials/_social.scss
@@ -105,3 +105,17 @@
 		text-align: left;
 	}
 }
+
+@media only screen and (max-width: 400px) {
+	
+	.social-media-list-item {
+		margin-right: 20px;
+	}
+}
+
+@media only screen and (max-width: 1200px) {
+	
+	.social-media-list-item {
+		margin-right: 20px;
+	}
+}
