Removed clearfix html
Replaced by extending clearfix on given elements

--- a/assets/stylesheets/partials/_countyInformation.scss
+++ b/assets/stylesheets/partials/_countyInformation.scss
@@ -8,6 +8,10 @@
 	}
 }
 
+.SESyndicationModule {
+	@extend .clearfix;
+}
+
 @media only screen and (max-width: 767px) {
 	.county-information {
 		padding: 10px;
