--- a/assets/stylesheets/partials/_news.scss
+++ b/assets/stylesheets/partials/_news.scss
@@ -49,9 +49,9 @@
   padding: 0;
 
   .county-photo-container {
+    @extend .clearfix;
     padding: 0 10px 0 0;
   }
-
 
 	.county-photo-feed-item {
 
