Changed link color on smaller screen
It was hard to see the gold against the white.

--- a/assets/stylesheets/partials/_promotions.scss
+++ b/assets/stylesheets/partials/_promotions.scss
@@ -85,6 +85,12 @@
       font-size: 1.75em;
       margin: 0;
     }
+    a {
+      color: $navy;
+      &:hover {
+        color: $light-blue;
+      }
+    }
   }
   .slick-dots {
     display: none !important; /*Overriding an element style attr added by slick */
