Fixed padding on county information
For screen sizes between 992px and 1200px

--- a/assets/stylesheets/partials/_countyInformation.scss
+++ b/assets/stylesheets/partials/_countyInformation.scss
@@ -17,3 +17,8 @@
 		padding: 10px;
 	}
 }
+@media only screen and (min-width: 992px) and (max-width: 1200px){
+	.county-information-container {
+		padding: 0 10px;
+	}
+}
