Adjusted margin around seal

--- a/assets/stylesheets/partials/_brand.scss
+++ b/assets/stylesheets/partials/_brand.scss
@@ -44,11 +44,12 @@
 .brand .brand-logo{
   height:65px;
   width:65px;
+  margin-right:5px;
 }
 
 .brand .brand-heading {
     font-size: 1.4em;
     line-height: 25px;
-    margin: 5px 0 0;
+    margin: 10px 0 0;
 }
 }
