--- a/assets/stylesheets/inside-template.scss
+++ b/assets/stylesheets/inside-template.scss
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:700);
 
 /*Resets*/
-@import "partials/normalize";
+// @import "partials/normalize";
 
 /* Modules and Variables */
 @import "partials/base";
